[gd_scene load_steps=7 format=2]

[ext_resource path="res://mobs/Mob.tscn" type="PackedScene" id=1]
[ext_resource path="res://mobs/sprites/enemyFlyingAlt_1.png" type="Texture" id=2]
[ext_resource path="res://mobs/sprites/enemyFlyingAlt_2.png" type="Texture" id=3]
[ext_resource path="res://mobs/JerkMob.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 3.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 48.0

[node name="JerkMob" instance=ExtResource( 1 )]
script = ExtResource( 4 )
max_speed = 200
min_scale = 0.5
max_scale = 1.0

[node name="AnimatedSprite" parent="." index="0"]
frames = SubResource( 1 )

[node name="CollisionShape2D" parent="." index="1"]
rotation = 0.0
shape = SubResource( 2 )

[node name="MoveTimer" type="Timer" parent="." index="5"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="WaitTimer" type="Timer" parent="." index="6"]
wait_time = 0.2
one_shot = true
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
